--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <h1>Send a professional proposal in 60 seconds.</h1>
 
     <form method="POST" action="/generate">
-      <label>Your business name</label>
+      <label>Your business name bro</label>
       <input name="your_business" placeholder="e.g., Neo Electrical" />
 
       <label>Client name *</label>
