--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
 <body>
   <div class="wrap">
     <h1>Send a professional proposal in 60 seconds.</h1>
+    <div style="opacity:.6;font-size:12px;">DEPLOY MARKER HOME v3</div>
+
 
     <form method="POST" action="/generate">
       <label>Your business name bro</label>
